--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -19,6 +19,8 @@
             android:paddingTop="6dip"
             android:paddingBottom="2dip" />
 		<!-- Description label -->
+		
+		<!--  
         <TextView
             android:id="@+id/email"
             android:layout_width="fill_parent"
@@ -26,6 +28,33 @@
             android:textColor="#acacac"
             android:paddingBottom="2dip">
         </TextView>
+        -->
+                <!-- Linear layout for cost and price Cost: Rs.100 -->
+        <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <!-- Cost Label -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#5d5d5d"
+            android:gravity="left"
+            android:textStyle="bold"
+            android:text="Rating: " >
+        </TextView>
+        <!-- Price Label -->
+        <TextView
+            android:id="@+id/email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#acacac" 
+            android:textStyle="bold"
+            android:gravity="left">
+        </TextView>
+        </LinearLayout>
+        
+        
         <!-- Linear layout for cost and price Cost: Rs.100 -->
         <LinearLayout
         android:layout_width="fill_parent"
@@ -38,7 +67,7 @@
             android:textColor="#5d5d5d"
             android:gravity="left"
             android:textStyle="bold"
-            android:text="Mobile: " >
+            android:text="Runtime: " >
         </TextView>
         <!-- Price Label -->
         <TextView
