--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -23,4 +23,13 @@
         android:layout_marginTop="62dp"
         android:text="movies" />
 
+    <Button
+        android:id="@+id/buttonRestaurants"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/buttonMovies"
+        android:layout_below="@+id/buttonMovies"
+        android:layout_marginTop="31dp"
+        android:text="restaurants" />
+
 </RelativeLayout>
